[package]
name = "nq"
description = "no quotes"
version = "0.0.7"
authors = ["chaixb <1481569358@qq.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/AliasT/nq"

[lib]
name = "nq"
path = "src/lib.rs"

[[bin]]
name = "gcnq"
path = "src/gcnq/main.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
